--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ section {
 
 footer {
     background-color: #333;
-    color: #fff;
+    color: #ffffff;
     text-align: center;
     padding: 10px 0;
 }
