--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ section {
 }
 
 footer {
-    background-color: #333;
+    background-color: #ed0c0c;
     color: #ffffff;
     text-align: center;
     padding: 10px 0;
