style sheet -footer color updated

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,8 +27,8 @@ section {
 }
 
 footer {
-    background-color: #ed0c0c;
-    color: #ffffff;
+    background-color: #333333;
+    color: #ffffffec;
     text-align: center;
     padding: 10px 0;
 }
