--- a/styles/style.css
+++ b/styles/style.css
@@ -27,8 +27,8 @@ section {
 }
 
 footer {
-    background-color: blue;
-    color: white;
+    background-color: #333333;
+    color: #fff;
     text-align: center;
     padding: 10px 0;
 }
