--- a/styles/style.css
+++ b/styles/style.css
@@ -32,3 +32,16 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+/* styles.css */
+pre {
+    background-color: #f4f4f4;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+code.java {
+    font-family: 'Courier New', Courier, monospace;
+    color: #333;
+}
+
+
