--- a/styles/style.css
+++ b/styles/style.css
@@ -44,4 +44,11 @@ code.java {
     color: #333;
 }
 
+code {
+    background-color: #eee;
+    border-radius: 3px;
+    font-family: courier, monospace;
+    padding: 0 3px;
+  }
+
 
