--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 /* Basic styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: #211f1f14;
     color: white; /* Set text color to white for better contrast */
 }
 
@@ -85,11 +85,10 @@ footer {
     background: #333;
     color: #fff;
     text-align: center;
-}
-
-footer p {
     padding: 10px 0;
 }
+
+
 
 
 
