--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 /* Basic styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(10, 9, 9);
+    background-color: rgba(13, 1, 9, 0.346);
     color: white; /* Set text color to white for better contrast */
 }
 
