--- a/styles/style.css
+++ b/styles/style.css
@@ -85,10 +85,11 @@ footer {
     background: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
 }
 
-
+footer p {
+    padding: 10px 0;
+}
 
 
 
