--- a/styles/style.css
+++ b/styles/style.css
@@ -1,103 +1,48 @@
-/* Reset CSS */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Basic styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: black;
-    color: white; /* Set text color to white for better contrast */
-}
-
-
-
-
-.container {
-    max-width: 1200px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .container {
+    width: 80%;
     margin: 0 auto;
-    padding: 0 20px;
-}
-
-header, nav, section, footer {
+  }
+  
+  header {
+    background-color: #333;
+    color: #fff;
     padding: 20px 0;
-}
-
-/* Header styling */
-header {
-    background: #f8f8f8;
-    text-align: center;
-}
-
-header h1 {
-    color: #333;
-}
-
-/* Navigation styling */
-nav ul {
-    list-style: none;
-    text-align: center;
-}
-
-nav ul li {
+  }
+  
+  header h1 {
+    margin: 0;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
     display: inline;
     margin-right: 20px;
-}
-
-nav ul li a {
+  }
+  
+  nav ul li a {
+    color: #fff;
     text-decoration: none;
-    color: #333;
-}
-
-/* Banner styling */
-.banner {
-    background: #eaeaea;
-    text-align: center;
+  }
+  
+  section {
     padding: 50px 0;
-}
-
-.banner h2 {
-    color: #333;
-}
-
-.banner p {
-    color: #666;
-    margin-bottom: 20px;
-}
-
-.btn {
-    background: #333;
+  }
+  
+  footer {
+    background-color: #333;
     color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background 0.3s ease;
-}
-
-.btn:hover {
-    background: #555;
-}
-
-/* Footer styling */
-footer {
-    background: #333;
-    color: #fff;
+    padding: 20px 0;
     text-align: center;
-}
-
-footer p {
-    padding: 10px 0;
-}
-
-
-
-.logo-img {
-    max-width: 400px; /* Set the maximum width of the logo */
-    height: auto; /* Allow the height to adjust proportionally */
-}
-.profile-separator__line {
-    border-bottom: 3px solid blue; /* Change the color and thickness as desired */
-}
-
+  }
+  
